--- a/QIMUIKit/QIMUIKitResources/Fonts/QTalk-QChat.html
+++ b/QIMUIKit/QIMUIKitResources/Fonts/QTalk-QChat.html
@@ -67,11 +67,11 @@
       font-size: 100px;
     }
     @font-face {font-family: "QTalk-QChat";
-      src: url('QTalk-QChat.eot?t=1545031586550'); /* IE9*/
-      src: url('QTalk-QChat.eot?t=1545031586550#iefix') format('embedded-opentype'), /* IE6-IE8 */
-      url('QTalk-QChat.woff?t=1545031586550') format('woff'), /* chrome, firefox */
-      url('QTalk-QChat.ttf?t=1545031586550') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-      url('QTalk-QChat.svg?t=1545031586550#iconfont') format('svg'); /* iOS 4.1- */
+      src: url('QTalk-QChat.eot?t=1548405217017'); /* IE9*/
+      src: url('QTalk-QChat.eot?t=1548405217017#iefix') format('embedded-opentype'), /* IE6-IE8 */
+      url('QTalk-QChat.woff?t=1548405217017') format('woff'), /* chrome, firefox */
+      url('QTalk-QChat.ttf?t=1548405217017') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+      url('QTalk-QChat.svg?t=1548405217017#iconfont') format('svg'); /* iOS 4.1- */
     }
     .iconfont {
       font-family: "QTalk-QChat" !important;
@@ -258,6 +258,11 @@
         <div class="code">&amp;#xf32a;</div>
       </li>
       <li>
+        <i class="icon iconfont">&#xf3b9;</i>
+        <div class="name">mob-wangfan-o</div>
+        <div class="code">&amp;#xf3b9;</div>
+      </li>
+      <li>
         <i class="icon iconfont">&#xf3c7;</i>
         <div class="name">mob-jiantouxias-f</div>
         <div class="code">&amp;#xf3c7;</div>
@@ -393,14 +398,29 @@
         <div class="code">&amp;#xe0b5;</div>
       </li>
       <li>
+        <i class="icon iconfont">&#xe0cd;</i>
+        <div class="name">travel-dianzane0cd-o</div>
+        <div class="code">&amp;#xe0cd;</div>
+      </li>
+      <li>
         <i class="icon iconfont">&#xe0cf;</i>
         <div class="name">travel-fenxiange0cf-f</div>
         <div class="code">&amp;#xe0cf;</div>
       </li>
       <li>
+        <i class="icon iconfont">&#xe0d4;</i>
+        <div class="name">travel-pinglun2e0d4-f</div>
+        <div class="code">&amp;#xe0d4;</div>
+      </li>
+      <li>
         <i class="icon iconfont">&#xe0d6;</i>
         <div class="name">travel-shipine0d6-o</div>
         <div class="code">&amp;#xe0d6;</div>
+      </li>
+      <li>
+        <i class="icon iconfont">&#xe0e7;</i>
+        <div class="name">travel-dianzan2e0e7-f</div>
+        <div class="code">&amp;#xe0e7;</div>
       </li>
       <li>
         <i class="icon iconfont">&#xe0e9;</i>
@@ -608,9 +628,19 @@
         <div class="code">&amp;#xe403;</div>
       </li>
       <li>
+        <i class="icon iconfont">&#xe40d;</i>
+        <div class="name">apt-tianjiae40d-o</div>
+        <div class="code">&amp;#xe40d;</div>
+      </li>
+      <li>
         <i class="icon iconfont">&#xe425;</i>
         <div class="name">hotel_new-xine425-o</div>
         <div class="code">&amp;#xe425;</div>
+      </li>
+      <li>
+        <i class="icon iconfont">&#xe42e;</i>
+        <div class="name">hotel_new-youjiantoue42e-f</div>
+        <div class="code">&amp;#xe42e;</div>
       </li>
       <li>
         <i class="icon iconfont">&#xe455;</i>
@@ -618,9 +648,19 @@
         <div class="code">&amp;#xe455;</div>
       </li>
       <li>
+        <i class="icon iconfont">&#xe486;</i>
+        <div class="name">hotel_new-shangjiantoue486-o</div>
+        <div class="code">&amp;#xe486;</div>
+      </li>
+      <li>
         <i class="icon iconfont">&#xe5eb;</i>
         <div class="name">mob-qunarthumbdown_oe5eb-f</div>
         <div class="code">&amp;#xe5eb;</div>
+      </li>
+      <li>
+        <i class="icon iconfont">&#xe644;</i>
+        <div class="name">www-top_arrow_qtalke644-o</div>
+        <div class="code">&amp;#xe644;</div>
       </li>
     </ul>
     <div class="helps">
